# src/index.ts
@@ -13,6 +13,7 @@ import { logRequest } from "@/middlewares/requestLog"
 import { deliveriesController } from "@/api/deliveries/controller"
 import { clientsController } from "@/api/clients/controller"
 import { relaysController } from "./api/relays/controller"
+import { driversController } from "./api/drivers/controller"
 
 const app = express()
 app.use(logRequest)
@@ -32,6 +33,7 @@ app.use(cors())
 app.use("/deliveries", deliveriesController)
 app.use("/clients", clientsController)
 app.use("/relays", relaysController)
+app.use("/drivers", driversController)
 
 /**
  * Homepage (uniquement necessaire pour cette demo)
